<resources>
    <string name="app_name">JumpStart</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="readTextString">Read the text:</string>
    <string name="speechTextString">What you said:</string>
    <string name="recordText">RECORD</string>
    <string name="recordingText">Record</string>
    <string name="stoprecordingText">Stop Recording</string>
    <string name="recordRing">Record your alarm!</string>
    <string name="notificationText" />
    <string name="playButton">PLAY</string>
    <string name="redoButton">REDO</string>
    <string name="card_save_button_text">Save</string>
    <string name="start_moving_text">Start Moving!</string>
    <string name="get_jumpstart_day_text">Get a JumpStart on your day</string>
    <string name="keep_moving_text">Keep Moving!</string>
    <string name="card_delete_button_text">Delete</string>
    <string name="ringtone_dialog_title">Ringtone:</string>
    <string name="reminder_dialog_title">Reminder:</string>
    <string name="reminder_dialog_hint">What do you want to be reminded of?</string>
    <string name="dreamTitle">~Record your dream~</string>
    <string name="dreamText">What are you dreaming about?</string>
    <string name="saveButton">Save</string>
    <string name="wakeup_text">Rise and Shine!</string>
    <string name="remindersday_label">Your reminders for the day:</string>
    <string name="setting_alarm_text">\nOpen up the Alarms tab\nClick the plus button to add a new alarm\nOpen the alarm to change settings including:\n\t\tDate if you wish for it to not be the current date\n\t\tAlarm Wake up type\n\t\tCustom or default sound\n\t\tReminder for the alarm\n</string>
    <string name="RecordingInstructions">\nIf you would like to wake up to your own recording record your own alarm\n\t\tIn Your Alarm Recordings tab click the record button\n\t\tOnce you have saved the recording it will show up\n\t\tIn the Alarm tab to select as your alarm sound\n</string>
    <string name="Remindersinstructions">\nYour Reminders tab lists out every reminder that is associated with your current set alarms!\n</string>
    <string name="DreamInstructions">\nRecord your dreams right when you wake up!\n\t\tGo to the Dreams tab and click record\n\t\tThe dreams tab shows all your recorded dreams\n</string>
    <string name="no_reminders_text">No Reminders</string>
    <string name="back_to_alarms_button_text">Back To Alarms</string>
    <string name="default_problems_remaining_text">Problems Remaining: 3</string>
    <string name="default_correct_answers_text">Correct Answers: 2</string>
    <string name="default_wrong_answers_text">Wrong Answers: 1</string>
    <string name="solve_this_math_problem_text">Solve This Math Problem</string>
    <string name="enter_answer_hint">Enter Answer Here</string>
    <string name="submit_button_text">Submit</string>
    <string name="save_button_text">Save</string>
    <string name="sample_alarm_time_text">8:00am</string>
    <string name="play_button_text">PLAY</string>
    <string name="delete_button_text">DELETE</string>
    <string name="getting_started_title">Getting Started With JumpStart Alarm</string>
    <string name="setting_alarm_title">Setting An Alarm</string>
    <string name="accessing_alarm_title">Accessing Your Alarms</string>
    <string name="creating_custom_alarm_title">Creating Custom Alarm Sound</string>
    <string name="your_dream_journal_title">Your Dream Journal</string>
    <string name="reminders_title_text">Your Active Reminders</string>
    <string name="nav_header_text">JumpStart</string>
    <string name="nav_subheader_text">Get a JumpStart on your day!</string>
    <string name="dreamTitleDisplay">Dream:</string>

    <string-array name="speech_text_array">
        <item>catfish are the only animals that naturally have an odd number of whiskers</item>
        <item>i wondered why the baseball was getting bigger then it hit me</item>
        <item>sea otters hold hands when they sleep so they don’t drift away from each other</item>
        <item>i can not believe I got fired from the calendar factory all I did was take a day off</item>
        <item>squirrels plant thousands of new trees each year simply by forgetting where they put their acorns</item>
    </string-array>

</resources>
