<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cs65.speech2text.RecordActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recordRing"
            android:id="@+id/ringtoneText"
            android:textSize="20sp" />

        <Space
            android:layout_width="20px"
            android:layout_height="40px" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notificationText"
            android:id="@+id/notificationID" />

        <Space
            android:layout_width="20px"
            android:layout_height="40px" />

        <ToggleButton
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="New ToggleButton"
            android:id="@+id/toggleButton"
            android:textOff="Record"
            android:textOn="Stop Recording"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/playButton"
            android:id="@+id/playButton"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/save_button_text"
            android:id="@+id/saveButton"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>
</RelativeLayout>
