<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Getting Started With JumpStart Alarm"
            android:id="@+id/gettingstartedTitle"
            android:padding="5dp"
            android:background="#25b0d7"
            android:textColor="#ffffff"
            android:gravity="center_horizontal"
            android:textSize="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Setting An Alarm"
            android:id="@+id/settingAlarm"
            android:padding="5dp"
            android:background="#751de1"
            android:textColor="#ffffff"
            android:textSize="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting_alarm_text"
            android:id="@+id/textView4"
            android:textColor="#000000" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Accessing Your Alarms"
            android:id="@+id/remindersInfo"
            android:padding="5dp"
            android:background="#751de1"
            android:textColor="#ffffff"
            android:textSize="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Remindersinstructions"
            android:id="@+id/textView6"
            android:autoText="true"
            android:textColor="#000000" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Creating Custom Alarm Sound"
            android:id="@+id/creatingCustomSound"
            android:padding="5dp"
            android:background="#751de1"
            android:textColor="#ffffff"
            android:textSize="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RecordingInstructions"
            android:id="@+id/textView5"
            android:textColor="#000000" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Your Dream Journal"
            android:id="@+id/dreamJournal"
            android:padding="5dp"
            android:background="#751de1"
            android:textColor="#ffffff"
            android:textSize="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:text="@string/DreamInstructions"
            android:id="@+id/textView7"
            android:textColor="#000000" />



    </LinearLayout>





</ScrollView>

